--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -29,7 +29,7 @@ actor_rollout_ref:
     override_config: { }
     enable_gradient_checkpointing: True
     use_remove_padding: False
-    use_liger: False
+    use_liger: True
     use_fused_kernels: False
     trust_remote_code: False
   actor:
